Fixed ' Industrial - things-we-do - top of sub nav things we do - hr gap even with top and bottom'

--- a/css/altres.css
+++ b/css/altres.css
@@ -848,7 +848,7 @@ body.front #main {
 div.title {
 	float: left;
 	margin-left: -225px;
-	margin-top: 26px;
+	margin-top: 20px;
 	margin-bottom: 16px;
 	width: 50px;
 }
@@ -1123,7 +1123,7 @@ blockquote.align-left {
 	width: 200px;
 	border-top: 1px solid #000;
 	font-size: 65%;
-	margin-top: 4px;
+	margin-top: 1px;
 }
 
 .right-col h4 {
@@ -1138,7 +1138,7 @@ blockquote.align-left {
 	width: 210px;
 	border-top: 1px solid #000;
 	font-size: 65%;
-	margin-top: 4px;
+	margin-top: 1px;
 	float: left;
 	margin-left: -225px;
 }
